tests/fail/no-unimported-text-parameter.tsx
import { Text } from "@/components/ui/text";

function Example(Text) {
    return <Text />;
}
